--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body{
+    @apply bg-gradient-to-b from-[#2C3E50] to-stone-600 ;
+    @apply text-white;
+    @apply min-h-screen;
+    font-family: "Poppins", sans-serif;
+}
